--- a/package.json
+++ b/package.json
@@ -8,18 +8,16 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "generate": "node src/js/generate-themes.cjs",
-    "build:theme-light-default:ltr": "sass src/scss/generated/theme-light.default.scss dist/theme-light.default.ltr.css --style=compressed",
-    "build:theme-light-default:rtl": "npm run build:theme-light-default:ltr && rtlcss dist/theme-light.default.ltr.css dist/theme-light.default.rtl.css",
-    "build:theme-dark-default:ltr": "sass src/scss/generated/theme-dark.default.scss dist/theme-dark.default.ltr.css --style=compressed",
-    "build:theme-dark-default:rtl": "npm run build:theme-dark-default:ltr && rtlcss dist/theme-dark.default.ltr.css dist/theme-dark.default.rtl.css",
-    "build:themes": "npm run build:theme-light-default:rtl && npm run build:theme-dark-default:rtl",
+    "build:themes:all": "sass src/scss/generated:dist --style=compressed && npm run build:rtl:all",
+    "build:rtl:all": "node src/js/build-rtl.cjs",
     "build:js": "rollup -c",
-    "build": "npm run generate && npm run build:themes && npm run build:js",
+    "build": "npm run generate && npm run build:themes:all && npm run build:js",
     "dev": "vite",
     "start": "vite preview",
     "test": "jest",
     "test:coverage": "jest --coverage"
   },
+
   "keywords": [
     "theme",
     "dark",
