fix: init theme service

--- a/themes.config.json
+++ b/themes.config.json
@@ -14,7 +14,7 @@
   "palettes": [
     {
       "name": "default",
-      "primary": "#0d6efd"
+      "primary": "#307cef"
     },
     {
       "name": "red",
